--- a/css/loaders/loader.css
+++ b/css/loaders/loader.css
@@ -1,23 +1,3 @@
-/*! ------------------------------------------------
- * Project Name: Name: Helio - Coming Soon and Landing Page Template
- * Project Description: Helio - bright and clean coming soon and landing page template to kick-start your project
- * Tags: mix_design, coming soon, under construction, template, landing page, portfolio, one page, responsive, html5, css3, creative, clean, agency, personal page
- * Version: 1.0.0
- * Build Date: November 2023
- * Last Update: November 2023
- * This product is available exclusively on Themeforest
- * Author: mix_design
- * Author URI: https://themeforest.net/user/mix_design */
-/*! File name: loader.css
- * ------------------------------------------------
- *
- * ------------------------------------------------
- * Table of Contents
- * ------------------------------------------------
- *  1. Loader Styles
- * ------------------------------------------------
- * Table of Contents End
- * ------------------------------------------------ */
 :root {
   --_size: 2rem;
   --_radius-s: 2rem;
@@ -120,7 +100,7 @@
     color-scheme: dark;
   }
 }
-[color-scheme=light] {
+[color-scheme="light"] {
   --base: var(--base--light);
   --base-inner: var(--base-inner--light);
   --accent: var(--accent--light);
@@ -140,7 +120,7 @@
   --t-opp-muted: var(--t-opp-muted--light);
 }
 
-[color-scheme=dark] {
+[color-scheme="dark"] {
   --base: var(--base--dark);
   --base-inner: var(--base-inner--dark);
   --accent: var(--accent--dark);
@@ -189,9 +169,9 @@
   bottom: auto;
   right: auto;
   -webkit-transform: translateX(-50%) translateY(-50%);
-     -moz-transform: translateX(-50%) translateY(-50%);
-      -ms-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .loader__logo {
@@ -206,12 +186,12 @@
 @-webkit-keyframes scaleOut {
   from {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
     opacity: 1;
   }
   to {
     -webkit-transform: scale3d(1.14, 1.14, 1.14);
-            transform: scale3d(1.14, 1.14, 1.14);
+    transform: scale3d(1.14, 1.14, 1.14);
     opacity: 0;
   }
 }
@@ -219,12 +199,12 @@
 @-moz-keyframes scaleOut {
   from {
     -moz-transform: scale3d(1, 1, 1);
-         transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
     opacity: 1;
   }
   to {
     -moz-transform: scale3d(1.14, 1.14, 1.14);
-         transform: scale3d(1.14, 1.14, 1.14);
+    transform: scale3d(1.14, 1.14, 1.14);
     opacity: 0;
   }
 }
@@ -232,24 +212,24 @@
 @keyframes scaleOut {
   from {
     -webkit-transform: scale3d(1, 1, 1);
-       -moz-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
     opacity: 1;
   }
   to {
     -webkit-transform: scale3d(1.14, 1.14, 1.14);
-       -moz-transform: scale3d(1.14, 1.14, 1.14);
-            transform: scale3d(1.14, 1.14, 1.14);
+    -moz-transform: scale3d(1.14, 1.14, 1.14);
+    transform: scale3d(1.14, 1.14, 1.14);
     opacity: 0;
   }
 }
 .scaleOut {
   -webkit-animation: scaleOut 0.3s 1;
-     -moz-animation: scaleOut 0.3s 1;
-          animation: scaleOut 0.3s 1;
+  -moz-animation: scaleOut 0.3s 1;
+  animation: scaleOut 0.3s 1;
   -webkit-animation-fill-mode: both;
-     -moz-animation-fill-mode: both;
-          animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 /* ------------------------------------------------*/
