--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,3 @@
-/*! ------------------------------------------------
- * Project Name: Name: Helio - Coming Soon and Landing Page Template
- * Project Description: Helio - bright and clean coming soon and landing page template to kick-start your project
- * Tags: mix_design, coming soon, under construction, template, landing page, portfolio, one page, responsive, html5, css3, creative, clean, agency, personal page
- * Version: 1.0.0
- * Build Date: November 2023
- * Last Update: November 2023
- * This product is available exclusively on Themeforest
- * Author: mix_design
- * Author URI: https://themeforest.net/user/mix_design */
-/*! File name: main.css
- * ------------------------------------------------
- *
- * ------------------------------------------------
- * Table of Contents
- * ------------------------------------------------
- *  1. Template Backgrounds
- *  2. Fonts
- *  3. Base CSS Styles
- *  4. Transitions
- *  5. Typography
- *  6. Buttons & Controls
- *  7. Forms and Forms Reply Groups
- *  8. Animated Backgrounds
- *  9. Header
- *  10. Main Section
- *  11. Menu
- *  12. Socials
- *  13. Countdown
- *  14. Swiper Slider
- *  15. Popup Dialogs
- *  16. Inner Sections
- *  17. Skillbars
- *  18. Features
- *  19. Accordion
- *  20. Team
- *  21. Showreel
- *  22. Contact Data
- *  23. Gallery
- * ------------------------------------------------
- * Table of Contents End
- * ------------------------------------------------ */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap");
 :root {
@@ -185,7 +143,7 @@
 }
 
 /* ------------------------------------------------*/
-/* Template Backgrounds Start */
+/*  Backgrounds Start */
 /* ------------------------------------------------*/
 .media-image-1 {
   background-image: url("../img/backgrounds/1440x1620_01.webp");
@@ -220,7 +178,7 @@
 }
 
 /* ------------------------------------------------*/
-/* Template Backgrounds End */
+/*  Backgrounds End */
 /* ------------------------------------------------*/
 /* ------------------------------------------------*/
 /* Fonts Start */
